tests/fail/map_outlives_closure.stderr
error[E0505]: cannot move out of `x` because it is borrowed
 --> tests/fail/map_outlives_closure.rs:7:10
  |
6 |     let fortified = fortified.map(|_| Lowered::new(&*x));
  |                                   ---               -- borrow occurs due to use in closure
  |                                   |
  |                                   borrow of `*x` occurs here
7 |     drop(x);
  |          ^ move out of `x` occurs here
8 |     assert_eq!(**fortified.borrow(), 123);
  |                  ------------------ borrow later used here
